<?xml version="1.0" encoding="utf-8"?>
<layout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".modules.menu.news.NewsFragment">

    <data>
        <variable
            name="viewModel"
            type="com.example.rudonews.modules.menu.profile.edit_profile.EditProfileViewModel" />
        <variable
            name="activity"
            type="com.example.rudonews.modules.menu.profile.edit_profile.EditProfileActivity" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:elevation="@dimen/toolbar_elevation"
            app:navigationIcon="@drawable/ic_arrow_back"
            android:background="@color/white"
            android:theme="@style/Theme.RudoNews"
            app:layout_constraintTop_toTopOf="parent"
            app:title="@string/edit_profile_toolbar"
            app:titleTextColor="@color/black"/>

        <TextView
            android:id="@+id/text_departments"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:clickable="true"
            android:elevation="@dimen/toolbar_elevation"
            android:focusable="true"
            android:textSize="@dimen/normal_text_size"
            android:hint="@string/departments"
            android:text="@={viewModel.departmentsText}"
            android:textColorHint="@color/fuchsia"
            onClickWithDebounce="@{() -> activity.goToDepartmentsActivity()}"
            android:layout_marginTop="@dimen/normal_margin"
            android:layout_marginHorizontal="@dimen/fab_margin"
            android:background="?selectableItemBackground"
            android:textColor="@color/fuchsia"
            android:drawablePadding="@dimen/normal_padding"
            app:layout_constraintTop_toBottomOf="@+id/toolbar"
            android:padding="@dimen/normal_padding"
            app:drawableRightCompat="@drawable/ic_arrow_right" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/text_layout_username"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="@dimen/fab_margin"
            android:layout_marginTop="@dimen/fab_margin"
            app:errorIconDrawable="@null"
            app:layout_constraintTop_toBottomOf="@+id/text_departments">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/edit_username"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/white"
                android:hint="@string/name"
                android:imeOptions="actionNext"
                android:inputType="text"
                android:text="@={viewModel.username}"/>

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/text_layout_email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/fab_margin"
            android:layout_marginHorizontal="@dimen/fab_margin"
            app:errorIconDrawable="@null"
            app:layout_constraintTop_toBottomOf="@+id/text_layout_username">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/edit_email"
                android:background="@color/white"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/email"
                android:text="@={viewModel.email}"
                android:inputType="text" />

        </com.google.android.material.textfield.TextInputLayout>

        <TextView
            android:id="@+id/text_change_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="@dimen/fab_margin"
            android:background="?selectableItemBackground"
            android:clickable="true"
            android:layout_marginTop="@dimen/normal_margin"
            android:drawablePadding="@dimen/normal_padding"
            android:padding="@dimen/normal_padding"
            android:focusable="true"
            onClickWithDebounce="@{() -> activity.goToChangePasswordActivity()}"
            android:text="@string/change_password"
            android:textColor="@color/black"
            app:drawableLeftCompat="@drawable/ic_lock"
            app:drawableRightCompat="@drawable/ic_arrow_forward_ios"
            app:layout_constraintTop_toBottomOf="@+id/text_layout_email" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/button_save_changes"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="@dimen/fab_margin"
            android:layout_marginBottom="@dimen/fab_margin"
            android:text="@string/save_changes"
            onClickWithDebounce="@{() -> viewModel.saveChanges()}"
            app:layout_constraintBottom_toBottomOf="parent"/>

    </androidx.constraintlayout.widget.ConstraintLayout>

</layout>