<?xml version="1.0" encoding="utf-8"?>

<layout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>
        <variable
            name="viewModel"
            type="com.example.rudonews.modules.forgotten_password.ForgottenPasswordViewModel" />

        <variable
            name="activity"
            type="com.example.rudonews.modules.forgotten_password.ForgottenPasswordActivity" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".modules.login.LoginActivity">

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/toolbar_forgotten_password"
            android:layout_width="match_parent"
            android:elevation="@dimen/toolbar_elevation"
            android:layout_height="wrap_content"
            app:navigationIcon="@drawable/ic_arrow_back"
            android:background="@color/white"
            app:title="@string/forgotten_password_toolbar"
            app:titleTextColor="@color/black"
            app:layout_constraintTop_toTopOf="parent"/>

        <ImageView
            android:id="@+id/imageView_logo"
            android:layout_width="@dimen/logo_size"
            android:layout_height="@dimen/logo_size"
            android:layout_marginTop="@dimen/normal_margin"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/toolbar_forgotten_password"
            app:srcCompat="@drawable/icon"
            android:contentDescription="@null"/>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/text_layout_email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="@dimen/fab_margin"
            app:errorIconDrawable="@null"
            app:helperTextTextColor="@color/red"
            app:layout_constraintBottom_toTopOf="@+id/button_forgotten_password"
            app:layout_constraintTop_toTopOf="@+id/toolbar_forgotten_password"
            tools:layout_editor_absoluteX="16dp">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/edit_email"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/white"
                android:hint="@string/email"
                android:imeOptions="actionNext"
                android:inputType="text"
                android:text="@={viewModel.email}" />

        </com.google.android.material.textfield.TextInputLayout>


        <TextView
            android:id="@+id/text_forgotten_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:layout_marginHorizontal="@dimen/big_margin"
            android:padding="@dimen/small_padding"
            android:text="@string/forgotten_password_text"
            android:textColor="@color/fuchsia"
            android:textStyle="bold"
            android:layout_marginTop="@dimen/fab_margin"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/text_layout_email"/>

        <com.google.android.material.button.MaterialButton
            android:id="@+id/button_forgotten_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="@dimen/fab_margin"
            android:layout_marginTop="@dimen/big_margin"
            android:onClick="@{() -> viewModel.resetPassword()}"
            android:layout_marginBottom="@dimen/fab_margin"
            android:text="@string/forgotten_password_button"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"/>

    </androidx.constraintlayout.widget.ConstraintLayout>

</layout>